<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sikaeapps.prestare.MainActivity"
    tools:showIn="@layout/activity_add_new_transaction">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/contact_name_edittext"
        android:hint="@string/contact_name_string"
        android:layout_centerHorizontal="true"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/borrow_lend_radiogroup"
        android:layout_below="@+id/contact_name_edittext">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lend_radiobutton"
            android:text="@string/lend_string"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/borrow_radiobutton"
            android:text="@string/borrow_string"/>
    </RadioGroup>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/money_item_radiogroup"
        android:orientation="horizontal"
        android:layout_below="@+id/borrow_lend_radiogroup"
        android:layout_centerHorizontal="true">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/money_radiobutton"
            android:text="@string/money_string"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_radiobutton"
            android:text="@string/item_string"/>
    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/money_item_string"
        android:layout_below="@+id/money_item_radiogroup"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_string"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/to_textview"
        android:layout_below="@+id/money_item_string"
        android:text="@string/to_string"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/to_dates_spinner"
        android:layout_toRightOf="@+id/to_textview"
        android:layout_below="@+id/money_item_string"
        android:entries="@array/to_dates"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reminder_textview"
        android:layout_below="@+id/to_dates_spinner"
        android:text="@string/reminder_string"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/reminder_textview"
        android:layout_below="@+id/to_dates_spinner"
        android:id="@+id/reminder_switch"
        android:textOff="@string/no_reminder_string"
        android:textOn="@string/no_reminder_string"/>


</RelativeLayout>
